psd-web/app/assets/application/stylesheets/images.scss
.image-with-preview {
  background-color: govuk-colour("grey-1");
  display: inline-block;
  vertical-align: top;
}

.image-without-preview {
  background-color: govuk-colour("grey-2");
  display: inline-block;
  font-weight: bold;
  text-align: center;
  vertical-align: top;
  padding: 20px;
}

.primary-image {
  max-width: 100%;
  height: auto;
}

.image-processing-placeholder {
  background-color: govuk-colour("grey-1");
  color: govuk-colour("white");
  display: inline-block;
  font-weight: bold;
  font-size: 2.5em;
  text-align: center;
  vertical-align: top;
}

.image-list {
  .image-preview {
    vertical-align: top;
  }

  .image-details {
    vertical-align: top;

    .image-title,
    .image-updated {
      display: inline-block;
    }

    .image-description {
      margin-bottom: 0.5em;
    }

    .edit-image-link {
      display: block;
    }

    .delete-image-link {
      margin-top: 0.5em;
    }
  }
}

